# recommend_movies

./: main.py  netflix_titles.ipynb  pyproject.toml  recommend_movies.ipynb
